src/test/ui/parser/macro/issue-33569.stderr
error: expected identifier, found `+`
  --> $DIR/issue-33569.rs:2:8
   |
LL |     { $+ } => {
   |        ^

error: missing fragment specifier
  --> $DIR/issue-33569.rs:2:8
   |
LL |     { $+ } => {
   |        ^

error: expected one of: `*`, `+`, or `?`
  --> $DIR/issue-33569.rs:5:13
   |
LL |         $(x)(y)
   |             ^^^

error: missing fragment specifier
  --> $DIR/issue-33569.rs:2:8
   |
LL |     { $+ } => {
   |        ^

error: aborting due to 4 previous errors

